--- a/src/gui/RubriqueProduits.fxml
+++ b/src/gui/RubriqueProduits.fxml
@@ -115,7 +115,7 @@
       <AnchorPane prefHeight="525.0" prefWidth="1025.0">
          <children>
             <ImageView fx:id="imageprod" fitHeight="345.0" fitWidth="301.0" layoutX="105.0" layoutY="105.0" pickOnBounds="true" preserveRatio="true" />
-            <Label fx:id="nomprod" alignment="CENTER" layoutX="87.0" layoutY="14.0" prefHeight="73.0" prefWidth="853.0" text="label" textAlignment="CENTER" underline="true">
+            <Label fx:id="nomprod" alignment="CENTER" layoutX="87.0" layoutY="14.0" prefHeight="73.0" prefWidth="853.0" textAlignment="CENTER" underline="true">
                <textFill>
                   <LinearGradient cycleMethod="REPEAT" endX="0.8398058252427184" endY="0.7815533980582524" startX="0.6601941747572816" startY="0.5533980582524272">
                      <stops>
@@ -129,19 +129,19 @@
                   <Font size="50.0" />
                </font>
             </Label>
-            <Label fx:id="caracteristique" alignment="CENTER" layoutX="513.0" layoutY="278.0" prefHeight="21.0" prefWidth="361.0" text="label" textFill="#708cf2">
+            <Label fx:id="caracteristique" alignment="CENTER" layoutX="513.0" layoutY="278.0" prefHeight="21.0" prefWidth="361.0" textFill="#708cf2">
                <font>
                   <Font size="25.0" />
                </font></Label>
-            <Label fx:id="prix" alignment="CENTER" layoutX="513.0" layoutY="354.0" prefHeight="21.0" prefWidth="361.0" text="label" textFill="#708cf2">
+            <Label fx:id="prix" alignment="CENTER" layoutX="513.0" layoutY="354.0" prefHeight="21.0" prefWidth="361.0" textFill="#708cf2">
                <font>
                   <Font size="25.0" />
                </font></Label>
-            <Label fx:id="quantite" alignment="CENTER" layoutX="513.0" layoutY="427.0" prefHeight="21.0" prefWidth="361.0" text="label" textFill="#708cf2">
+            <Label fx:id="quantite" alignment="CENTER" layoutX="513.0" layoutY="427.0" prefHeight="21.0" prefWidth="361.0" textFill="#708cf2">
                <font>
                   <Font size="25.0" />
                </font></Label>
-            <Text fx:id="description" fill="#708cf2" layoutX="513.0" layoutY="207.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" textAlignment="CENTER" wrappingWidth="360.9999931345228">
+            <Text fx:id="description" fill="#708cf2" layoutX="513.0" layoutY="207.0" strokeType="OUTSIDE" strokeWidth="0.0" textAlignment="CENTER" wrappingWidth="360.9999931345228">
                <font>
                   <Font size="25.0" />
                </font>
