--- a/src/gui/HomeAdmin.fxml
+++ b/src/gui/HomeAdmin.fxml
@@ -166,6 +166,25 @@
                   </Label>
                </children>
             </HBox>
+            <HBox alignment="CENTER_LEFT" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onMouseClicked="#ClickUtilisateur" prefHeight="40.0" prefWidth="332.0" styleClass="btns" stylesheets="@css/HomeAdmin.css">
+               <padding>
+                  <Insets left="10.0" />
+               </padding>
+               <opaqueInsets>
+                  <Insets />
+               </opaqueInsets>
+               <children>
+                  <FontAwesomeIconView glyphName="TH" glyphStyle="-fx-fill:#7C8184" size="2em" />
+                  <Label text="Gestion Utilisateurs" textFill="#7c8184">
+                     <font>
+                        <Font name="Calibri Light" size="20.0" />
+                     </font>
+                     <HBox.margin>
+                        <Insets left="10.0" />
+                     </HBox.margin>
+                  </Label>
+               </children>
+            </HBox>
          </children>
       </VBox>
       <VBox layoutX="312.0" layoutY="-2.0" prefHeight="579.0" prefWidth="858.0">
