--- a/src/gui/Register.fxml
+++ b/src/gui/Register.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Hyperlink?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.PasswordField?>
@@ -14,8 +15,16 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
+<?import java.lang.*?>
+<?import java.net.*?>
+<?import java.util.*?>
+<?import javafx.collections.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.paint.*?>
 
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="700.0" style="-fx-background-color: #20120F;" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.controller.LoginController">
+<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="700.0" style="-fx-background-color: #20120F;" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.controller.RegisterController">
    <children>
       <ImageView fitHeight="677.0" fitWidth="1010.0" layoutX="-180.0" layoutY="-81.0" opacity="0.77" pickOnBounds="true" preserveRatio="true">
          <effect>
@@ -34,12 +43,12 @@
       </ImageView>
       <AnchorPane layoutX="384.0" layoutY="84.0" prefHeight="450.0" prefWidth="330.0" style="-fx-background-color: #8fc6c9;">
          <children>
-            <TextField id="tfusername" fx:id="tfusername" layoutX="24.0" layoutY="140.0" prefHeight="25.0" prefWidth="264.0" promptText="username" style="-fx-background-color: #;">
+            <TextField fx:id="rusername" layoutX="24.0" layoutY="140.0" prefHeight="25.0" prefWidth="264.0" promptText="username" style="-fx-background-color: #;">
                <effect>
                   <InnerShadow color="#1a4a72" />
                </effect>
             </TextField>
-            <PasswordField id="tfpassword" fx:id="tfpassword" layoutX="25.0" layoutY="237.0" prefHeight="25.0" prefWidth="264.0" promptText="password">
+            <PasswordField fx:id="rpassword" layoutX="25.0" layoutY="178.0" prefHeight="25.0" prefWidth="264.0" promptText="password">
                <effect>
                   <InnerShadow color="#1a4a72" />
                </effect>
@@ -47,29 +56,28 @@
                   <Insets />
                </opaqueInsets>
             </PasswordField>
-            <Button layoutX="36.0" layoutY="303.0" mnemonicParsing="false" onAction="#Authentification" prefHeight="25.0" prefWidth="242.0" style="-fx-background-color: #8fc6c9;" text="Sign In" textFill="#378dae">
+            <Button layoutX="36.0" layoutY="303.0" mnemonicParsing="false" prefHeight="25.0" onAction="#Registration" prefWidth="242.0" style="-fx-background-color: #8fc6c9;" text="Register" textFill="#378dae">
                <effect>
                   <InnerShadow />
                </effect>
                <font>
                   <Font name="System Bold" size="12.0" />
                </font></Button>
-               
-            <Label layoutX="129.0" layoutY="89.0" text="Sign In" textFill="#060111">
+            <Label layoutX="129.0" layoutY="89.0" text="Register" textFill="#060111">
                <font>
                   <Font size="18.0" />
                </font>
             </Label>
-            <Hyperlink alignment="TOP_LEFT" layoutX="94.0" layoutY="351.0" style="-fx-alignment: align;" text="forgot password ?" textAlignment="CENTER" textFill="#01181b">
-               <font>
-                  <Font name="System Bold" size="12.0" />
-               </font>
-            </Hyperlink>
-            <Hyperlink fx:id="reg" alignment="TOP_LEFT" layoutX="94.0" layoutY="370.0" onAction="#Register" style="-fx-alignment: align;" text="registrer maintenant" textAlignment="CENTER" textFill="#01181b">
-               <font>
-                  <Font name="System Bold" size="12.0" />
-               </font>
-            </Hyperlink>
+            
+            <ComboBox fx:id="roleCombo" layoutX="129.0" layoutY="225.0" prefWidth="150.0" promptText="choose">
+            <items>
+                <FXCollections fx:factory="observableArrayList">
+          <String fx:value="Client"  />
+          <String fx:value="Admin" />
+            </FXCollections>
+             </items>
+            </ComboBox>
+            <Label layoutX="25.0" layoutY="225.0" prefHeight="31.0" prefWidth="65.0" text="role" />
          </children>
          <effect>
             <InnerShadow />
